tests/build/cases/widget_new/missing_semi2.stderr
error: expected `;`
  --> cases/widget_new/missing_semi2.rs:11:9
   |
11 |         enabled = true;
   |         ^^^^^^^
